@@ -28,7 +28,7 @@
         <td>
           <div class="all_day_block">
             <div class="create">
-              <a class="add" href="#"><img src="${api.static_url}/images/cal_icons_plus.png" /></a>
+              <a class="add" href="${calendar.add_event_url}"><img src="${api.static_url}/images/cal_icons_plus.png" /></a>
             </div>
 
             <div tal:repeat="event calendar.all_day_events" class="cal_event cal_event_pos_full">
